; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_misc.c_create_inf_file.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_misc.c_create_inf_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GENERIC_WRITE = common dso_local global i32 0, align 4
@CREATE_ALWAYS = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@create_inf_file.data = internal constant [138 x i8] c"[Version]\0ASignature=\22$Chicago$\22\0AAdvancedINF=2.5\0A[DefaultInstall]\0ARegisterOCXs=RegisterOCXsSection\0A[RegisterOCXsSection]\0A%%11%%\\ole32.dll\0A\00", align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @create_inf_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_inf_file(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @GENERIC_WRITE, align 4
  %7 = load i32, i32* @CREATE_ALWAYS, align 4
  %8 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %9 = call i32 @CreateFileA(i32 %5, i32 %6, i32 0, i32* null, i32 %7, i32 %8, i32* null)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @WriteFile(i32 %10, i8* getelementptr inbounds ([138 x i8], [138 x i8]* @create_inf_file.data, i64 0, i64 0), i32 137, i32* %3, i32* null)
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @CloseHandle(i32 %12)
  ret void
}

declare dso_local i32 @CreateFileA(i32, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @WriteFile(i32, i8*, i32, i32*, i32*) #1

declare dso_local i32 @CloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
